Add Scroll To Anchor

--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -76,6 +76,7 @@
     <tr></tr>
   </tbody>
 </table>
+<div id="updateFormDetails">
 <div class="wrapper" *ngIf="update">
   <div id="formContent">
     <h2
@@ -212,7 +213,8 @@
     </div>
   </div>
 </div>
-
+</div>
+<div id="addFriendForm">
 <div class="wrapper" *ngIf="addFriend">
   <div id="formContent">
     <h2
@@ -257,4 +259,5 @@
       {{ serverErrorMessages }}
     </div>
   </div>
+</div>
 </div>
