--- a/src/app/user/sign-up/sign-up.component.html
+++ b/src/app/user/sign-up/sign-up.component.html
@@ -124,7 +124,7 @@
   <!----------------------------------------------------------------------------------------->
   <input type="submit" value="Sign Up" />
 </form>
-
+<ngx-spinner></ngx-spinner>
 <!-- Success message -->
 <div class="success" *ngIf="showSucessMessage">Saved successfully</div>
 
